<resources>
    <string name="app_name">Asteroides</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de</string>
    <string name="Salir">Salir</string>
    <string name="Puntuaciones">Puntuaciones</string>
    <string name="acction_settings">Configuracion</string>
</resources>
